# 22s2-cp-spa-team-34

./: .gitignore  CPPLINT.cfg  README.md  autotester_script.py  check-submission.py
Team34/Code34/src/integration_testing/: CMakeLists.txt
Team34/Code34/src/integration_testing/src/: TestPKB.cpp  TestPKBQPS.cpp  TestSPA.cpp  TestSPandPKB.cpp
Team34/Code34/src/integration_testing/src/qps/: TestQPS.cpp  ut_eval_src_ref.txt
Team34/Code34/src/integration_testing/src/qps/entity/: TestEntity.cpp
Team34/Code34/src/integration_testing/src/qps/stub_entity/: StubClearer.cpp  StubConstProcVarGetter.cpp
Team34/Code34/src/integration_testing/src/sp/: TestCFGExtractor.cpp  TestCallsExtractor.cpp  TestEntityExtractor.cpp  TestFollowsExtractor.cpp  TestModifiesExtractor.cpp  TestParentExtractor.cpp  TestPatternExtractor.cpp  TestUsesExtractor.cpp
Team34/Code34/src/integration_testing/src/sp/stub/: StubConstAdder.cpp  StubIfPatternAdder.cpp  StubModifiesAdder.cpp  StubStmtAdder.cpp  StubWhilePatternAdder.cpp
Team34/Code34/src/integration_testing/tests/: Assign_spa_source.txt  Calls_spa_source.txt  Follows_spa_source.txt  Multiclause_aspa_source.txt  UsesP_spa_source.txt  With_spa_source.txt
Team34/Code34/src/integration_testing/tests/sp/: sp_calls_nested_topo.txt  sp_cfg.txt  sp_entities_basic.txt  sp_follows_basic.txt  sp_ifwhile_pattern.txt  sp_modifies_container.txt
Team34/Code34/src/unit_testing/: CMakeLists.txt
Team34/Code34/src/unit_testing/src/common/: TestASTBuilder.cpp
Team34/Code34/src/unit_testing/src/pkb/base/: TestBaseMap.cpp  TestBaseMapSet.cpp  (+2 more)
(+546 files in other folders)
